{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 30,
  "lineage": "368212d9-abf6-4816-aa19-f3c078b253fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0081597309f8953e5",
            "domain": "vpc",
            "id": "eipalloc-0f6317e0efa8d38d2",
            "instance": "i-039e88aa132776bd8",
            "network_interface": "eni-06920cdca85dd82cf",
            "private_dns": "ip-192-168-1-153.eu-west-1.compute.internal",
            "private_ip": "192.168.1.153",
            "public_dns": "ec2-99-81-120-80.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.120.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-1"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cf02e41f852a7f67",
            "domain": "vpc",
            "id": "eipalloc-011b1c71d902bea8e",
            "instance": "i-03db740c0a46a283b",
            "network_interface": "eni-01ecc400f4db0008f",
            "private_dns": "ip-192-168-1-65.eu-west-1.compute.internal",
            "private_ip": "192.168.1.65",
            "public_dns": "ec2-54-77-215-226.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.215.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-2"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-db-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-0f145c85230254d25",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f145c85230254d25",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-083e575e2dd7ecb5b",
            "private_dns": "ip-192-168-2-141.eu-west-1.compute.internal",
            "private_ip": "192.168.2.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04379245cbc354641",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01361acd1c87200e0",
            "tags": {
              "Name": "instance-db-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025b75fd2387dc1b7",
              "sg-0e50e4939760bd2ed"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-db-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-0562ab6a626872563",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0562ab6a626872563",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-00d2323f846cef4df",
            "private_dns": "ip-192-168-2-66.eu-west-1.compute.internal",
            "private_ip": "192.168.2.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e083cf94d41846f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01361acd1c87200e0",
            "tags": {
              "Name": "instance-db-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025b75fd2387dc1b7",
              "sg-0e50e4939760bd2ed"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-db-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-01e2b0686c78fa97e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01e2b0686c78fa97e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0932d5791a19bc954",
            "private_dns": "ip-192-168-2-65.eu-west-1.compute.internal",
            "private_ip": "192.168.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05ecef1f9b777ddcb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01361acd1c87200e0",
            "tags": {
              "Name": "instance-db-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025b75fd2387dc1b7",
              "sg-0e50e4939760bd2ed"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-039e88aa132776bd8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-039e88aa132776bd8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-06920cdca85dd82cf",
            "private_dns": "ip-192-168-1-153.eu-west-1.compute.internal",
            "private_ip": "192.168.1.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08fe44ab72ee0d7fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123440c4b1ae7cb",
            "tags": {
              "Name": "instance-http-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0590612117fe01d4b",
              "sg-0e50e4939760bd2ed"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-03db740c0a46a283b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03db740c0a46a283b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-01ecc400f4db0008f",
            "private_dns": "ip-192-168-1-65.eu-west-1.compute.internal",
            "private_ip": "192.168.1.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09c27e821e809e341",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01123440c4b1ae7cb",
            "tags": {
              "Name": "instance-http-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0590612117fe01d4b",
              "sg-0e50e4939760bd2ed"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-059f02770883b2953",
            "owner_id": "153726843398",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/db-lb/557fb59519ef6fbe",
            "arn_suffix": "net/db-lb/557fb59519ef6fbe",
            "dns_name": "db-lb-557fb59519ef6fbe.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/db-lb/557fb59519ef6fbe",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "db-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01361acd1c87200e0"
              }
            ],
            "subnets": [
              "subnet-01361acd1c87200e0"
            ],
            "tags": {
              "Name": "db-lb"
            },
            "vpc_id": "vpc-04d899d81c8f987d6",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "depends_on": [
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/http-lb/f06407888a28430d",
            "arn_suffix": "net/http-lb/f06407888a28430d",
            "dns_name": "http-lb-f06407888a28430d.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/http-lb/f06407888a28430d",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "http-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01123440c4b1ae7cb"
              }
            ],
            "subnets": [
              "subnet-01123440c4b1ae7cb"
            ],
            "tags": {
              "Name": "http-lb"
            },
            "vpc_id": "vpc-04d899d81c8f987d6",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "depends_on": [
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:listener/net/db-lb/557fb59519ef6fbe/13474b0d305e3817",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:listener/net/db-lb/557fb59519ef6fbe/13474b0d305e3817",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/db-lb/557fb59519ef6fbe",
            "port": 3306,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.db",
            "aws_lb_target_group.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:listener/net/http-lb/f06407888a28430d/899381206f5a90ae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:listener/net/http-lb/f06407888a28430d/899381206f5a90ae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:loadbalancer/net/http-lb/f06407888a28430d",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.http",
            "aws_lb_target_group.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
            "arn_suffix": "targetgroup/db-lb-target-group/f0c189168f205a79",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
            "lambda_multi_value_headers_enabled": false,
            "name": "db-lb-target-group",
            "port": 3306,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "db-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a",
            "arn_suffix": "targetgroup/http-lb-target-group/f24c10f51366e08a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a",
            "lambda_multi_value_headers_enabled": false,
            "name": "http-lb-target-group",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "http-lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "db",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-db-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79-20191225192607386100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
            "target_id": "i-0f145c85230254d25"
          },
          "depends_on": [
            "aws_instance.db",
            "aws_lb_target_group.db"
          ]
        },
        {
          "index_key": "instance-db-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79-20191225192607412100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
            "target_id": "i-0562ab6a626872563"
          },
          "depends_on": [
            "aws_instance.db",
            "aws_lb_target_group.db"
          ]
        },
        {
          "index_key": "instance-db-3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79-20191225192607471100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/db-lb-target-group/f0c189168f205a79",
            "target_id": "i-01e2b0686c78fa97e"
          },
          "depends_on": [
            "aws_instance.db",
            "aws_lb_target_group.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "http",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a-20191225192607421100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a",
            "target_id": "i-039e88aa132776bd8"
          },
          "depends_on": [
            "aws_instance.http",
            "aws_lb_target_group.http"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a-20191225192607451100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:153726843398:targetgroup/http-lb-target-group/f24c10f51366e08a",
            "target_id": "i-03db740c0a46a283b"
          },
          "depends_on": [
            "aws_instance.http",
            "aws_lb_target_group.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0df8405b24aeeeec2",
            "owner_id": "153726843398",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059f02770883b2953",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09120c75dec8cb210",
            "route_table_id": "rtb-0df8405b24aeeeec2",
            "subnet_id": "subnet-01361acd1c87200e0"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d43685cf53e02a3",
            "route_table_id": "rtb-0df8405b24aeeeec2",
            "subnet_id": "subnet-01123440c4b1ae7cb"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0e50e4939760bd2ed",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e50e4939760bd2ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-025b75fd2387dc1b7",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025b75fd2387dc1b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0590612117fe01d4b",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590612117fe01d4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-01361acd1c87200e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-01361acd1c87200e0",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-db"
            },
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-01123440c4b1ae7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-01123440c4b1ae7cb",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-04d899d81c8f987d6"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:vpc/vpc-04d899d81c8f987d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a845d7ccf9bc176a",
            "default_route_table_id": "rtb-07c06f411274bc94b",
            "default_security_group_id": "sg-0c4252916a438d404",
            "dhcp_options_id": "dopt-dc21bfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d899d81c8f987d6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c06f411274bc94b",
            "owner_id": "153726843398",
            "tags": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}